--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ commands:
     steps:
       - restore_cache:
           keys:
-            - v1-dependencies-{{ checksum "Gemfile" }}-{{ checksum "oura.gemspec" }}
+            - v1-dependencies-{{ checksum "oura.gemspec" }}
             - v1-dependencies-
       - run:
           name: install dependencies
@@ -20,7 +20,7 @@ commands:
       - save_cache:
           paths:
             - ./vendor/bundle
-          key: v1-dependencies-{{ checksum "Gemfile" }}-{{ checksum "oura.gemspec" }}
+          key: v1-dependencies-{{ checksum "oura.gemspec" }}
       - persist_to_workspace:
           root: .
           paths:
