--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -53,8 +53,7 @@ jobs:
       - run:
           name: Upload coverage
           when: on_success
-          command: |
-            bash <(curl -fs https://codecov.io/bash) -t ${CODECOV_TOKEN}
+          command: bash <(curl -fs https://codecov.io/bash) -t ${CODECOV_TOKEN}
       - store_test_results:
           path: ${CIRCLE_ARTIFACTS}
       - store_artifacts:
@@ -70,7 +69,6 @@ jobs:
       - run:
           name: Run danger
           command: |
-            bundle --path vendor/bundle --quiet
             bundle exec danger --fail-on-errors=true
 workflows:
   integration:
