--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,6 +2,8 @@ defaults: &defaults
   working_directory: ~/repo
   environment:
     - CIRCLE_ARTIFACTS: "/tmp/test-results"
+orbs:
+  slack: circleci/slack@3.2.0
 executors:
   default_container:
     docker:
@@ -25,6 +27,25 @@ commands:
           root: .
           paths:
             - .
+  notify-slack:
+    parameters:
+      message:
+        type: string
+        default: ""
+      title:
+        type: string
+        default: "$CIRCLE_JOB"
+      author_link:
+	    type: string
+	    default: ""
+    steps:
+      - slack/notify:
+          author_name: "Release Link"
+	      author_link: << parameters.author_link >>
+          color: "good"
+          message: << parameters.message >>
+          title: << parameters.title >>
+          webhook: $SLACK_WEBHOOK_URL
 version: 2.1
 jobs:
   prepare:
@@ -34,6 +55,16 @@ jobs:
     steps:
       - checkout
       - restore-and-save-cache
+    run:
+      name: shared tag
+      command: |
+        old_tag=$(git describe --tags @^ | tr "-" " " | awk '{print $1}')
+        new_tag=$(git describe --tags)
+        title_link="https://github.com/paveg/oura/${old_tag}...${new_tag}"
+        echo 'export TITLE_LINK="$title_link"' >> $BASH_ENV
+    notify-slack:
+      message: ":+1: succeeded"
+      author_link: $TITLE_LINK
   rspec:
     <<: *defaults
     executor: default_container
