--- a/.github/workflows/release_draft.yml
+++ b/.github/workflows/release_draft.yml
@@ -7,6 +7,6 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: Release Draft
-      uses: toolmantim/release-drafter@v5.2.0
+      uses: toolmantim/release-drafter@master
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
